Fix vertical align

--- a/src/components/routeDiagram/zone.css
+++ b/src/components/routeDiagram/zone.css
@@ -45,7 +45,7 @@
     padding: 0px 6px;
     font-size: 11px;
     font-weight: 500;
-    line-height: 12px;
+    line-height: 13px;
     letter-spacing: -0.025em;
     text-transform: uppercase;
     color: white;
